argo-cd/app-demo/base/demo-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: squad-a-nginx-gateway
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - squad.a.nginx.lab.k8s.io
    port:
      name: http
      number: 80
      protocol: HTTP
